# GraphicLibraries

./: .gitignore  CMakeLists.txt  GraphicLibraries.sln
src/core/: CMakeLists.txt
src/core/include/core/: actor.hpp  actor.inl  renderer.hpp
src/core/include/core/components/: component.hpp  component_transform.hpp  material_renderer.hpp  model_renderer.hpp
src/core/include/core/resource_management/: material_manager.hpp  model_manager.hpp  resource_manager.hpp  shader_manager.hpp  texture_manager.hpp
src/core/src/: actor.cpp  renderer.cpp
src/core/src/components/: component.cpp  component_transform.cpp  material_renderer.cpp  model_renderer.cpp
src/core/src/resource_management/: material_manager.cpp  model_manager.cpp  shader_manager.cpp  texture_manager.cpp
src/core/src/resources/: material.cpp
src/core/src/scene_system/: scene.cpp  scene_manager.cpp
src/directx11/: CMakeLists.txt  directx_11.cpp  directx_11.hpp
src/directx11/widgets/: fps_counter.cpp  fps_counter.hpp
src/directx11/windows/: windows_interface.hpp
src/directx12/: CMakeLists.txt  directx_12.cpp  directx_12.hpp  render_factory.hpp
src/directx12/shaders/: vertex.glsl
src/directx12/windows/: win32.cpp  win32.hpp  window_observers.hpp
src/engine/: CMakeLists.txt
src/engine/include/engine/: application.hpp  context.hpp  editor.hpp
src/engine/src/: application.cpp  context.cpp  editor.cpp  main.cpp
src/engine/src/panels/: base_view.cpp  controllable_view.cpp  scene_view.cpp
src/engine/src/utils/: camera_controller.cpp
src/logs/: CMakeLists.txt
src/logs/include/logs/: console_color.hpp  console_handler.hpp  log_handler.hpp  logger.hpp  logger.inl
src/logs/src/: console_handler.cpp  logger.cpp
src/math/: CMakeLists.txt
src/math/include/math/: matrix3.hpp  matrix4.hpp  quaternion.hpp  transform.hpp  transform_notifier.hpp  vector2.hpp  vector3.hpp  vector4.hpp
src/math/src/: matrix3.cpp  matrix4.cpp  quaternion.cpp  transform.cpp  transform_notifier.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/opengl/: CMakeLists.txt  main.cpp  resource_manager.cpp  resource_manager.hpp  utils.hpp
src/opengl/2d_models/: triangle.cpp  triangle.hpp
src/opengl/3d_models/: cube.cpp  cube.hpp
src/opengl/core/: actor.cpp  renderer.cpp  renderer.hpp
src/opengl/core/components/: component.cpp  component_transform.cpp  component_transform.hpp  material_renderer.cpp  material_renderer.hpp  model_renderer.cpp  model_renderer.hpp
src/opengl/core/resource_management/: material_manager.cpp  model_manager.cpp  model_manager.hpp  resource_manager.hpp  shader_manager.cpp  texture_manager.cpp
src/opengl/core/resources/: material.cpp  material.hpp  material.inl
src/opengl/core/scene_system/: scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
src/opengl/debug/: console_color.hpp  console_handler.cpp  console_handler.hpp  log_handler.hpp  logger.cpp  logger.hpp  logger.inl
src/opengl/engine/: application.cpp  application.hpp  context.cpp  context.hpp  editor.cpp  editor.hpp
src/opengl/glfw/: device.cpp  device.hpp  device_error.hpp  glfw.cpp  glfw.hpp
src/opengl/glfw/settings/: device_settings.hpp  window_settings.hpp
src/opengl/include/opengl/: camera.hpp  driver.hpp  opengl.hpp
src/opengl/interfaces/: camera.hpp  drawable.hpp  level.hpp  object_2d.hpp  object_3d.hpp  resource.hpp
src/opengl/math/: matrix3.cpp  matrix4.cpp  matrix4.hpp  quaternion.cpp  quaternion.hpp  transform.cpp  transform.hpp  transform_notifier.cpp  transform_notifier.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp  vector4.cpp  vector4.hpp
src/opengl/objects/: camera.cpp  camera.hpp  external_model_loader.cpp  external_model_loader.hpp  movable_camera.cpp  movable_camera.hpp  moveble_camera.cpp  moveble_camera.hpp  opengl.cpp  opengl.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/opengl/objects/2d_models/: triangle.cpp  triangle.hpp
src/opengl/objects/3d_models/: cube.cpp  cube.hpp  external_model.cpp  external_model.hpp
src/opengl/objects/levels/: external_model_showcase.cpp  external_model_showcase.hpp  simple_2d.cpp  simple_2d.hpp  simple_3d.cpp  simple_3d.hpp
src/opengl/opengl/: camera.cpp  camera.hpp  driver.cpp  opengl_renderer.cpp  opengl_renderer.hpp
src/opengl/opengl/buffers/: index_buffer.cpp  vertex_array.cpp  vertex_array.hpp  vertex_array.inl  vertex_buffer.hpp  vertex_buffer.inl
src/opengl/opengl/geometry/: vertex.hpp
src/opengl/opengl/resources/: mesh.cpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/opengl/opengl/settings/: comparison_algorithm.hpp  pixel_data_format.hpp  pixel_data_type.hpp  primitive_mode.hpp  rendering_capability.hpp
src/opengl/shaders/: 2d_simple_texture_fragment.glsl  2d_vertex.glsl  3d_external_model_vertex.glsl
src/opengl/src/: camera.cpp  driver.cpp  opengl.cpp
src/opengl/src/buffers/: index_buffer.cpp  vertex_array.cpp
src/opengl/src/resources/: mesh.cpp  model.cpp  shader.cpp  texture.cpp
src/opengl/tools/time/: clock.hpp  date.hpp
src/opengl/tools/utils/: path_parser.cpp  path_parser.hpp
src/opengl/types/: mesh.hpp  vertex.hpp
src/opengl/widgets/: fps_counter.cpp  fps_counter.hpp  settings.cpp  settings.hpp
src/opengl/windows/: glfw.cpp  glfw.hpp  window_observers.hpp
src/tools/: CMakeLists.txt
src/tools/include/tools/eventing/: event.hpp  (+1 more)
src/tools/src/utils/: path_parser.cpp  random.cpp
src/ui/: CMakeLists.txt  window_sdl2.cpp  window_sdl2.h
src/ui/include/ui/: drawable_interface.hpp  ui_manager.hpp
src/ui/src/: ui_manager.cpp
src/ui/src/internal/: converter.cpp
src/ui/src/modules/: canvas.cpp
src/ui/src/panels/: base_panel.cpp  panel_transformable.cpp  panel_window.cpp
src/vulkan/: CMakeLists.txt  render_factory.hpp  utils.hpp  vulkan.cpp  vulkan.hpp
src/vulkan/shaders/: fragment.glsl  vertex.spv
src/vulkan/windows/: sdl2.cpp  sdl2.hpp
src/windows/: CMakeLists.txt  glfw.cpp  glfw.hpp  sdl2.cpp  sdl2.h  sdl2.hpp  win32.cpp  win32.h  win32.hpp  windows_interface.h
src/windows/include/windows/: sdl2.hpp
src/windows/src/: input_manager.cpp  sdl2.cpp
(+111 files in other folders)
